# EquityOracle

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: README.md  dependencies.py  middleware.py
backend/app/api/rest/: analysis.py  autonomy.py  health.py  performance.py  portfolio.py  recommendations.py  scanner.py  system.py
backend/app/api/sse/: debate.py  thesis.py
backend/app/application/: README.md
backend/app/application/autonomy/: ab_testing.py  controller.py  pipeline.py  self_improve.py
backend/app/application/backtester/: service.py  vectorbt_adapter.py
backend/app/application/ingestion/: scheduler_jobs.py  service.py
backend/app/application/recommender/: audit.py  debate.py  service.py
backend/app/application/scanner/: filter_spec.py  presets.py  service.py
backend/app/application/simulator/: event_loop.py  service.py
backend/app/core/: README.md  events.py  exceptions.py  logging.py  observability.py  scheduler.py  types.py
backend/app/domain/analysis/: README.md  composite.py  decorrelation.py  factors.py  models.py  ports.py  technical.py
backend/app/domain/market_data/: README.md  liquidity.py  models.py  ports.py  quality.py  services.py
backend/app/domain/portfolio/: README.md  costs.py  engine.py  models.py  ports.py  sizing.py
backend/app/domain/recommendation/: README.md  exit_signals.py  models.py  ports.py  scoring.py
backend/app/domain/risk/: README.md  circuit_breaker.py  manager.py  models.py  regime.py
backend/app/infrastructure/: README.md
backend/app/ml/: README.md
backend/tests/: conftest.py
backend/tests/integration/: test_autonomy_flow.py  test_data_quality_pipeline.py  test_portfolio_flow.py  test_recommendation_pipeline.py
configs/: README.md  autonomy.yaml  (+3 more)
(+121 files in other folders)
